// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`all 1`] = `
<!DOCTYPE html>
<html x-key="4YdxMf">
<head x-key="SjEhUS"></head>
<body x-key="dcZW7r">
  <div x-key="ZsbTbN" x--id="urls.query.id"></div>
  <img x-key="dI6Gqu" src="https://www.baidu.com/favicon.ico" x--src="$item.url">
  <img x-key="wVc0jO" src="https://www.baidu.com/favicon.ico" x--src="$item.url">
  <input x-key="GWcRbw" type="text" x--value="1 + 5">
</body>
</html>
`;

exports[`all 2`] = `
<!DOCTYPE html>
<html x-key="4YdxMf">
<head x-key="SjEhUS"></head>
<body x-key="dcZW7r">
  <div x-key="ZsbTbN" x--id="urls.query.id"></div>
  <img x-key="dI6Gqu" src="https://www.baidu.com/favicon.ico" x--src="$item.url">
  <img x-key="wVc0jO" src="https://www.baidu.com/favicon.ico" x--src="$item.url">
  <input x-key="GWcRbw" type="text" x--value="1+5">
</body>
</html>
`;
